--- a/.github/工作流程/ibm.yml
+++ b/.github/工作流程/ibm.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '0 12 * * FRI'
+    - 的cron的：“0 12 * * * 
 
 jobs:
   ibm-cloud-restart:
